Fix spacings and credits footer

--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@ body {
   display: flex;
   background: #e7e7e7;
   margin: 0;
+  min-height: 100vh;
 }
 
 .background {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  position: relative;
   width: 50vw;
   background-image: url('assets/background.jpg');
   background-repeat: no-repeat;
@@ -55,7 +56,7 @@ body {
 
 .credits {
   align-self: center;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   color: #fff;
 }
@@ -68,7 +69,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 50vw;
-  padding: 100px 100px 0 40px;
+  padding: 100px;
+  padding-left: 40px;
   font-family: 'Roboto';
 }
 
@@ -82,7 +84,7 @@ body {
 form div {
   display: flex;
   flex-wrap: wrap;
-  padding-right: 40px;
+  /* padding-right: 40px; */
   margin-bottom: 20px;
   font-size: 12px;
   font-weight: 700;
@@ -92,7 +94,7 @@ form div {
 form div div{
   display: flex;
   flex-direction: column;
-  flex: 1 1 40%;
+  flex: 1 1 35%;
 }
 
 div input {
